working on deploy

--- a/bce-web-server/package.json
+++ b/bce-web-server/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev --port 3030",
-		"build": "vite build --port 3030",
+		"build": "vite build",
 		"preview": "vite preview --port 3030",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
