--- a/bce-web-server/package.json
+++ b/bce-web-server/package.json
@@ -1,22 +1,24 @@
 {
-	"name": "bce-web-server",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev --port 3030",
-		"build": "vite build",
-		"preview": "vite preview --port 3030",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
-	},
-	"type": "module"
+    "name": "bce-web-server",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+	"dev": "vite dev --port 3030",
+	"build": "vite build",
+	"preview": "vite preview --port 3030",
+	"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+	"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
+    },
+    "devDependencies": {
+	"@sveltejs/adapter-auto": "^3.0.0",
+	"@sveltejs/kit": "^2.0.0",
+	"@sveltejs/vite-plugin-svelte": "^3.0.0",
+	"svelte": "^4.2.7",
+	"svelte-check": "^3.6.0",
+	"typescript": "^5.0.0",
+	"vite": "^5.0.3",
+	"svelte-headlessui": "",
+	"svelte-transition": ""
+    },
+    "type": "module"
 }
