--- a/bce-web-server/package.json
+++ b/bce-web-server/package.json
@@ -18,8 +18,8 @@
 	"typescript": "^5.0.0",
 	"vite": "^5.0.3",
 	"svelte-headlessui": "",
-	"svelte-transition": ""
-	"three": "*",
+	"svelte-transition": "",
+	"three": "*"
     },
     "type": "module"
 }
