--- a/bce-web-server/package.json
+++ b/bce-web-server/package.json
@@ -5,7 +5,7 @@
     "scripts": {
 	"dev": "./start_dev.sh",
 	"build": "vite build",
-	"preview": "./start_preview.sh,
+	"preview": "./start_preview.sh",
 	"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 	"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
     },
